packages/bs-templates/templates/agenda-admin/style.scss
@import '../layout/base';
@import '../components/nav';
@import '../form-components/image-upload';
@import '../form-components/input-with-icon';

.agenda-admin {

  margin: 60px auto;

  .header {

    padding: 20px;

    .agenda-logo {
      display: block;
      border-radius: 50%;
      overflow: hidden;
      img {
        max-width: 100%;
      }
    }

  }

  .body {

    padding: 0 30px 2em;

  }

  .nav {
    padding-bottom: 20px;
    ul {
      display: inline-block;
      padding: 0 6px;
      margin-bottom: 0;
    }
    li {
      display: none;
      &.menu-item {
        display: inline-block;
        padding: 0 10px;
        margin: 0;
        &.selected {
          border-left: none;
          color: $oa-blue;
        }
      }
    }
    @media (min-width: $screen-md-min) {  
      ul {
        display: block;
        padding: 0;
      }
      li {
        display: block;
        &.menu-item {
          display: block;
          padding: 0 0 0 20px;
          &.selected {
            border-left: 4px solid $oa-blue;
            color: inherit;
          }
        }
      }
    }
  }

  @media (min-width: $screen-md-min) {
    .filters {
      background: transparent;

      & > div {
        background: $oa-white;
        margin: 10px;
        padding: 10px 20px;
      }
    }
  }

  &.redirect {

    .body {
      text-align: center;
      padding: 16em 0;
    }

  }

}

